# marvin-live

./: .env.example  .env.local.example  .gitignore  AGENTS.md  CHANTIERS.md  CLAUDE.md  COST_ANALYSIS.md  DEBUG_LOG.md  Dockerfile  HANDOFF.md  MARVIN_IDEAL_FLOW.md  Makefile  RUNBOOK.md  TEST_HANDOFF.md  lessons_learned.md  marvin_revamp_4_chantiers.md  marvin_technical_flow.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  railway.backend.toml  railway.frontend.toml  railway.toml  render.yaml  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
UI Marvin/: MissionControl.jsx  MissionDashboard.jsx  MissionOnboarding.jsx  marvin_homepage_v2.html
app/: globals.css  layout.tsx  page.tsx
docs/: deerflow_exploration.md  graph-advance-paths.md
e2e/: chantier4-drive-research.spec.ts  chantier4-phase2.spec.ts  chantier4-verify.spec.ts  cp5-qa-cap.spec.ts
e2e-test/: c261_verification.spec.js  c26_acceptance.spec.js  check4_deliverable.js  check4_screenshot.js  diag.spec.js  gate_ux_check.js  package-lock.json  package.json  playwright.config.js  run_test.js  validation_v2.js  verify_cps.spec.js
marvin/: __init__.py  artifacts.py  events.py  llm_factory.py  runtime_debug.py
marvin_ui/: server.py
revamp/: marvin_revamp_final.md  prompt_adversus.md  prompt_calculus.md  prompt_dora.md  prompt_merlin.md  prompt_orchestrator.md
scripts/: c12_drive.py  c12_fresh.py  c12_headless.py  live_mission_e2e.mjs  repro_no_edgar.py  scenario_c.py  smoke_runtime.py
tests/: agent-display.test.ts  api-integration.test.ts  gate-validation.test.ts  mission-control-ux.test.ts  mission-control.test.ts  mission-creation.test.ts  repository-integration.test.ts  test_agent_construction.py  test_agents.py  test_brief_frozen.py  test_chat_resume.py  test_checkpoint_persistence.py  test_clarification_persistence.py  test_compute_hypothesis_status.py  test_conversational_steering.py  (+53 more)
(+103 files in other folders)
