[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marvin"
version = "0.1.0"
description = "MARVIN — Commercial Due Diligence automation platform (FastAPI + LangGraph + Next.js)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "python-dotenv>=1,<2",
    "langgraph>=1,<2",
    "langchain-core>=1,<2",
    "langchain-openai>=1,<2",
    "aiosqlite>=0.19,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.23,<1",
]

[project.scripts]
marvin-server = "marvin_ui.server:run_server"

[tool.setuptools.packages.find]
include = ["marvin*", "marvin_ui*"]
exclude = ["tests*", "output*", "node_modules*", "app*", "lib*", "components*", "UI Marvin*", "e2e-test*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Integration tests hit live external APIs (Tavily etc.). They are slow,
# cost real money, and require valid credentials in the env. Excluded
# from the default run; opt in with `pytest -m integration`.
markers = [
    "integration: hits live external APIs (Tavily, OpenRouter); needs creds",
]
addopts = "-m 'not integration'"
